--- a/index.html
+++ b/index.html
@@ -183,90 +183,149 @@
 
                                         </div>
                                     </div>
+                                    <div class="intro-wrapper--three">
+                                        <div class="intro-bar intro-bar--two">
+                                            <div class="intro__wrap">
+                                                <h1 class="intro-title">Холодные закуски  <div class="intro__decor">
+                                                    NEW
+                                                </div></h1>
+                                                <div class="intro__wrapper">
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Сендвич с копченой курицей </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="intro__price">
+                                                            <span>180 руб.</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Сендвич с балыком </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="intro__price">
+                                                            <span>180 руб.</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Фреш ролл с стрипсом</div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="intro__price">
+                                                            <span>240 руб.</span>
+                                                        </div>
+                                                    </div>
+                                                    <!-- <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Брускета с беконом и
+                                                                        вялеными томатами</div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="intro__price">
+                                                            <span>160 руб.</span>
+                                                        </div>
+                                                    </div> -->
+                                                </div>
+                                            </div>
+                                        </div>
 
 
-                                    <div class="intro-bar">
-                                        <div class="intro__wrap">
-                                            <h1 class="intro-title">Горячие (б/а) напитки</h1>
-                                            <div class="intro__wrapper">
-                                                <div class="intro__row">
-                                                    <div class="intro__col">
-                                                        <div class="intro__table">
-                                                            <div class="intro__table-row">
-                                                                <div class="intro__title">Эспрессо </div>
+                                        <div class="intro-bar">
+                                            <div class="intro__wrap">
+                                                <h1 class="intro-title">Горячие (б/а) напитки</h1>
+                                                <div class="intro__wrapper">
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Эспрессо </div>
+                                                                </div>
                                                             </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="intro__price">
-                                                        <span>65 руб.</span>
-                                                    </div>
-                                                </div>
-                                                <div class="intro__row">
-                                                    <div class="intro__col">
-                                                        <div class="intro__table">
-                                                            <div class="intro__table-row">
-                                                                <div class="intro__title">Доппио </div>
-                                                            </div>
+                                                        <div class="intro__price">
+                                                            <span>65 руб.</span>
                                                         </div>
                                                     </div>
-                                                    <div class="intro__price">
-                                                        <span>130 руб.</span>
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Доппио </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="intro__price">
+                                                            <span>130 руб.</span>
+                                                        </div>
                                                     </div>
-                                                </div>
-                                                <div class="intro__row">
-                                                    <div class="intro__col">
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
 
-                                                        <div class="intro__table">
-                                                            <div class="intro__table-row">
-                                                                <div class="intro__title">Американо </div>
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Американо </div>
+                                                                </div>
                                                             </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="intro__price">
-                                                        <span>65 руб.</span>
-                                                    </div>
-                                                </div>
-                                                <div class="intro__row">
-                                                    <div class="intro__col">
-                                                        <div class="intro__table">
-                                                            <div class="intro__table-row">
-                                                                <div class="intro__title">Капучино</div>
-                                                            </div>
+                                                        <div class="intro__price">
+                                                            <span>65 руб.</span>
                                                         </div>
                                                     </div>
-                                                    <div class="intro__price">
-                                                        <span>75 руб.</span>
-                                                    </div>
-                                                </div>
-                                                <div class="intro__row">
-                                                    <div class="intro__col">
-                                                        <div class="intro__table">
-                                                            <div class="intro__table-row">
-                                                                <div class="intro__title">Латте</div>
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Капучино</div>
+                                                                </div>
                                                             </div>
                                                         </div>
+                                                        <div class="intro__price">
+                                                            <span>75 руб.</span>
+                                                        </div>
                                                     </div>
-                                                    <div class="intro__price">
-                                                        <span>85 руб.</span>
-                                                    </div>
-                                                </div>
-                                                <div class="intro__row">
-                                                    <div class="intro__col">
-                                                        <div class="intro__table">
-                                                            <div class="intro__table-row">
-                                                                <div class="intro__title"> Раф </div>
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Латте</div>
+                                                                </div>
                                                             </div>
-                                                            <!-- <div class="intro__table-row">
+                                                        </div>
+                                                        <div class="intro__price">
+                                                            <span>85 руб.</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title"> Раф </div>
+                                                                </div>
+                                                                <!-- <div class="intro__table-row">
                                                                 <span class="intro__text">эспрессо, сливки, сироп
                                                                 </span>
                                                             </div> -->
+                                                            </div>
+                                                        </div>
+                                                        <div class="intro__price">
+                                                            <span>180 руб.</span>
                                                         </div>
                                                     </div>
-                                                    <div class="intro__price">
-                                                        <span>180 руб.</span>
-                                                    </div>
-                                                </div>
-                                                <!-- <div class="intro__row">
+                                                    <!-- <div class="intro__row">
                                                     <div class="intro__col">
                                                         <div class="intro__table">
                                                             <div class="intro__table-row">
@@ -282,7 +341,7 @@
                                                         <span>230 руб.</span>
                                                     </div>
                                                 </div> -->
-                                                <!-- <div class="intro__row">
+                                                    <!-- <div class="intro__row">
                                                     <div class="intro__col">
                                                         <div class="intro__table">
                                                             <div class="intro__table-row">
@@ -297,22 +356,23 @@
                                                         <span>120 руб.</span>
                                                     </div>
                                                 </div> -->
-                                                <div class="intro__row">
-                                                    <div class="intro__col">
-                                                        <div class="intro__table">
-                                                            <div class="intro__table-row">
-                                                                <div class="intro__title">Чай </div>
-                                                            </div>
-                                                            <!-- <div class="intro__table-row">
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Чай </div>
+                                                                </div>
+                                                                <!-- <div class="intro__table-row">
                                                                 <span class="intro__text">апельсин, лимон</span>
                                                             </div> -->
+                                                            </div>
+                                                        </div>
+                                                        <div class="intro__price">
+                                                            <span>50 руб.</span>
                                                         </div>
                                                     </div>
-                                                    <div class="intro__price">
-                                                        <span>50 руб.</span>
-                                                    </div>
-                                                </div>
 
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
