--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                                             </div>
                                             <div class="intro__row">
                                                 <div class="intro__col">
-                                                    <div class="intro__decor">
+                                                    <!-- <div class="intro__decor">
                                                         NEW
-                                                    </div>
+                                                    </div> -->
                                                     <div class="intro__title">Донер стрипс</div>
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
@@ -61,9 +61,9 @@
                                             </div>
                                             <div class="intro__row">
                                                 <div class="intro__col">
-                                                    <div class="intro__decor">
+                                                    <!-- <div class="intro__decor">
                                                         NEW
-                                                    </div>
+                                                    </div> -->
                                                     <div class="intro__title">Донер
                                                         стрипс(Сырный)</div>
                                                     <div class="intro__table">
@@ -173,7 +173,17 @@
                                             <div class="intro-header__text">Наггетсы</div>
                                             <div class="intro-header__price">140 руб.</div>
                                         </div>
+                                        <div class="intro-header__wrap intro-header__wrap--combo">
+                                            <h1 class="intro-title">Комбо меню <div class="intro__decor">
+                                                NEW
+                                            </div></h1>
+                                            <div class="intro-header__col">
+                                                <div class="intro-header__text">Мясное комбо </div>
+                                                <span class="intro__text">Картофель фри, Луковые кольца, Крылышки KFC, Стрипсы куриные, Наггетсы</span>
+                                                <div class="intro-header__price">699 руб.</div>
+                                            </div>
 
+                                        </div>
                                         <div class="intro-header__wrap intro-header__wrap--two">
                                             <h1 class="intro-title">Десерт</h1>
                                             <div class="intro-header__col">
