--- a/index.html
+++ b/index.html
@@ -175,14 +175,20 @@
                                         </div>
                                         <div class="intro-header__wrap intro-header__wrap--combo">
                                             <h1 class="intro-title">Комбо меню <div class="intro__decor">
-                                                NEW
-                                            </div></h1>
+                                                    NEW
+                                                </div>
+                                            </h1>
                                             <div class="intro-header__col">
-                                                <div class="intro-header__text">Мясное комбо </div>
-                                                <span class="intro__text">Картофель фри, Луковые кольца, Крылышки KFC, Стрипсы куриные, Наггетсы</span>
-                                                <div class="intro-header__price">699 руб.</div>
+                                                <div class="intro-header__text">Мясное Комбо </div>
+                                                <span class="intro__text">Крылышки KFC, Стрипсы куриные, Наггетсы</span>
+                                                <div class="intro-header__price">430 руб.</div>
                                             </div>
-
+                                            <div class="intro-header__col intro-header__col--set">
+                                                <div class="intro-header__text">Сет Фри </div>
+                                                <span class="intro__text">Картофель фри, Луковые кольца, Сырные
+                                                    шарики</span>
+                                                <div class="intro-header__price">395 руб.</div>
+                                            </div>
                                         </div>
                                         <div class="intro-header__wrap intro-header__wrap--two">
                                             <h1 class="intro-title">Десерт</h1>
@@ -196,15 +202,17 @@
                                     <div class="intro-wrapper--three">
                                         <div class="intro-bar intro-bar--two">
                                             <div class="intro__wrap">
-                                                <h1 class="intro-title">Холодные закуски  <div class="intro__decor">
-                                                    NEW
-                                                </div></h1>
+                                                <h1 class="intro-title">Холодные закуски <div class="intro__decor">
+                                                        NEW
+                                                    </div>
+                                                </h1>
                                                 <div class="intro__wrapper">
                                                     <div class="intro__row">
                                                         <div class="intro__col">
                                                             <div class="intro__table">
                                                                 <div class="intro__table-row">
-                                                                    <div class="intro__title">Сендвич с копченой курицей </div>
+                                                                    <div class="intro__title">Сендвич с копченой курицей
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                         </div>
