--- a/index.html
+++ b/index.html
@@ -413,10 +413,30 @@
                                                     <div class="intro-footer__price"><span>90 руб.</span></div>
                                                 </div>
                                                 <div class="intro-footer__col">
-                                                    <div class="intro-footer__text">Кола Стекло</div>
-                                                    <span class="intro-footer__subtext">200мл </span>
-                                                    <div class="intro-footer__price"><span>110 руб.</span></div>
+                                                    <div class="intro__decor">
+                                                        NEW
+                                                    </div>
+                                                    <div class="intro-footer__text">Энергетик Burn</div>
+                                                    <span class="intro-footer__subtext">0,5л </span>
+                                                    <div class="intro-footer__price"><span>155 руб.</span></div>
                                                 </div>
+                                                <div class="intro-footer__col">
+                                                    <div class="intro__decor">
+                                                        NEW
+                                                    </div>
+                                                    <div class="intro-footer__text"> Adrenaline Rush</div>
+                                                    <span class="intro-footer__subtext">0,5л </span>
+                                                    <div class="intro-footer__price"><span>155 руб.</span></div>
+                                                </div>
+                                                <div class="intro-footer__col">
+                                                    <div class="intro__decor">
+                                                        NEW
+                                                    </div>
+                                                    <div class="intro-footer__text">Энергетик Red Bull</div>
+                                                    <span class="intro-footer__subtext">0,35мл </span>
+                                                    <div class="intro-footer__price"><span>200 руб.</span></div>
+                                                </div>
+                                                
                                                 <div class="intro-footer__col">
                                                     <div class="intro-footer__text">Сок асс.</div>
                                                     <span class="intro-footer__subtext">0,2мл/0,3мл</span>
@@ -429,20 +449,39 @@
                                             <h1 class="intro-title">Согревающие напитки</h1>
                                             <div class="intro-footer__wrap">
                                                 <div class="intro-footer__col">
-                                                    <div class="intro__decor">
-                                                        NEW
-                                                    </div>
+                                                   
                                                     <div class="intro-footer__text">Глинтвейн</div>
                                                     <span class="intro-footer__subtext">Красный / Белый</span>
                                                     <div class="intro-footer__price"><span>200 руб.</span></div>
                                                 </div>
                                                 <div class="intro-footer__col">
-                                                    <div class="intro__decor">
-                                                        NEW
-                                                    </div>
                                                     <div class="intro-footer__text">Пьяная Вишня</div>
                                                     <!-- <span class="intro-footer__subtext">1л</span> -->
                                                     <div class="intro-footer__price"><span>180 руб.</span></div>
+                                                </div>
+
+                                            </div>
+
+                                        </div>
+                                        <div class="intro-footer intro-footer--beer">
+                                            <h1 class="intro-title">Холодные напитки  <div class="intro__decor">
+                                                NEW
+                                            </div></h1>
+                                            <div class="intro-footer__wrap">
+                                                <div class="intro-footer__col">
+                                                    <div class="intro-footer__text">Пиво Светлое</div>
+                                                    <span class="intro-footer__subtext">0,5л</span>
+                                                    <div class="intro-footer__price"><span>110 руб.</span></div>
+                                                </div>
+                                                <div class="intro-footer__col">
+                                                    <div class="intro-footer__text">Пиво Нефильтрованное</div>
+                                                    <span class="intro-footer__subtext">0,5л</span>
+                                                    <div class="intro-footer__price"><span>110 руб.</span></div>
+                                                </div>
+                                                <div class="intro-footer__col">
+                                                    <div class="intro-footer__text">Corona Extra </div>
+                                                    <span class="intro-footer__subtext">0,33мл</span>
+                                                    <div class="intro-footer__price"><span>210 руб.</span></div>
                                                 </div>
 
                                             </div>
