--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                             <div class="intro-header__price">150 руб.</div>
                                         </div>
                                         <div class="intro-header__col">
-                                            <div class="intro-header__text">Лук Фри</div>
+                                            <div class="intro-header__text">Луковые кольца </div>
                                             <div class="intro-header__price">100 руб.</div>
                                         </div>
                                         <div class="intro-header__col">
@@ -194,9 +194,15 @@
                                             <h1 class="intro-title">Десерт</h1>
                                             <div class="intro-header__col">
                                                 <div class="intro-header__text">Пончик</div>
-                                                <div class="intro-header__price">90 руб.</div>
+                                                <div class="intro-header__price">125 руб.</div>
                                             </div>
-
+                                            <div class="intro-header__col">
+                                                <div class="intro__decor">
+                                                    NEW
+                                                </div>
+                                                <div class="intro-header__text">Яблочный штрудель</div>
+                                                <div class="intro-header__price">75 руб.</div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="intro-wrapper--three">
@@ -311,7 +317,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="intro__price">
-                                                            <span>75 руб.</span>
+                                                            <span>85 руб.</span>
                                                         </div>
                                                     </div>
                                                     <div class="intro__row">
@@ -435,7 +441,7 @@
                                                     <span class="intro-footer__subtext">0,35мл </span>
                                                     <div class="intro-footer__price"><span>200 руб.</span></div>
                                                 </div>
-                                                
+
                                                 <div class="intro-footer__col">
                                                     <div class="intro-footer__text">Сок асс.</div>
                                                     <span class="intro-footer__subtext">0,2мл/0,3мл</span>
@@ -448,7 +454,7 @@
                                             <h1 class="intro-title">Согревающие напитки</h1>
                                             <div class="intro-footer__wrap">
                                                 <div class="intro-footer__col">
-                                                   
+
                                                     <div class="intro-footer__text">Глинтвейн</div>
                                                     <span class="intro-footer__subtext">Красный / Белый</span>
                                                     <div class="intro-footer__price"><span>200 руб.</span></div>
@@ -464,8 +470,9 @@
                                         </div>
                                         <div class="intro-footer intro-footer--beer">
                                             <h1 class="intro-title">Пиво<div class="intro__decor">
-                                                NEW
-                                            </div></h1>
+                                                    NEW
+                                                </div>
+                                            </h1>
                                             <div class="intro-footer__wrap">
                                                 <div class="intro-footer__col">
                                                     <div class="intro-footer__text"> Светлое</div>
